--- a/scalecube-organization/src/main/resources/couchbase-settings.properties
+++ b/scalecube-organization/src/main/resources/couchbase-settings.properties
@@ -6,8 +6,8 @@ org.members.bucket.user.roles=bucket_full_access
 org.members.bucket.type=COUCHBASE
 # org members quota in megabytes
 org.members.bucket.quota=100
-org.members.bucket.replicas=0
-org.members.bucket.indexReplicas=false
+org.members.bucket.replicas=2
+org.members.bucket.indexReplicas=true
 org.members.bucket.enableFlush=false
 organizations.bucket=organizations
 organizations.bucket.password=123456
