--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@
 
   <properties>
     <scalecube.config.version>0.3.6</scalecube.config.version>
-    <scalecube-services.version>2.4.4-SNAPSHOT</scalecube-services.version>
-    <scalecube-gateway.version>2.4.4-SNAPSHOT</scalecube-gateway.version>
+    <scalecube-services.version>2.4.4</scalecube-services.version>
+    <scalecube-gateway.version>2.4.4</scalecube-gateway.version>
     <scalecube-security-jwt.version>1.0.2</scalecube-security-jwt.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <junit.jupiter.version>5.3.0</junit.jupiter.version>
