--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <scalecube-gateway.version>2.4.4</scalecube-gateway.version>
     <scalecube-security-jwt.version>1.0.2</scalecube-security-jwt.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <junit.jupiter.version>5.3.0</junit.jupiter.version>
+    <junit-jupiter.version>5.3.0</junit-jupiter.version>
     <jackson-databind.version>2.7.6</jackson-databind.version>
     <vault-java-driver.version>3.1.0</vault-java-driver.version>
     <couchbase-client.version>2.6.0</couchbase-client.version>
