--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ addons:
   apt:
     packages:
     - libxml-xpath-perl
+    - python3-pip
 sudo: required
 language: java
 jdk: openjdk8
@@ -12,6 +13,13 @@ after_success: "./src/main/scripts/ci/after-success.sh"
 deploy:
 - provider: script
   script:
+  - "pip3 install -r requirements.txt && python3 ./src/main/scripts/cd/travis_tests.py"
+  - "./src/main/scripts/cd/deploy.sh"
+  on:
+    branch: feature/internal_tests
+- provider: script
+  script:
+  - "pip3 install -r requirements.txt && python3 ./src/main/scripts/cd/travis_tests.py"
   - "./src/main/scripts/cd/deploy.sh"
   on:
     branch: develop
