--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,25 @@ addons:
 sudo: required
 language: java
 jdk: openjdk8
+before_install:
+- "./src/main/scripts/ci/before-install.sh"
+- "./src/main/scripts/cd/before-deploy.sh"
+after_success: "./src/main/scripts/ci/after-success.sh"
 deploy:
 - provider: script
   script:
   - "pip3 install -r requirements.txt && python3 ./src/main/scripts/cd/travis_tests.py"
+  - "./src/main/scripts/cd/deploy.sh"
   on:
     branch: feature/internal_tests
 - provider: script
   script:
   - "pip3 install -r requirements.txt && python3 ./src/main/scripts/cd/travis_tests.py"
+  - "./src/main/scripts/cd/deploy.sh"
   on:
     branch: develop
+- provider: script
+  script:
+  - "./src/main/scripts/cd/release.sh"
+  on:
+    branch: master
