--- a/.travis.yml
+++ b/.travis.yml
@@ -4,22 +4,19 @@ addons:
     - libxml-xpath-perl
     - python3-pip
 sudo: required
+
 language: java
 jdk: openjdk8
+
 before_install:
 - "./src/main/scripts/ci/before-install.sh"
 - "./src/main/scripts/cd/before-deploy.sh"
-after_success: "./src/main/scripts/ci/after-success.sh"
-deploy:
+
+script:
+  - if [ "$TRAVIS_BRANCH" == "develop" ]; then pip3 install -r requirements.txt && python3 ./src/main/scripts/cd/travis_tests.py; fi;
+
 - provider: script
   script:
-  - "pip3 install -r requirements.txt && python3 ./src/main/scripts/cd/travis_tests.py"
-  - "./src/main/scripts/cd/deploy.sh"
-  on:
-    branch: feature/internal_tests
-- provider: script
-  script:
-  - "pip3 install -r requirements.txt && python3 ./src/main/scripts/cd/travis_tests.py"
   - "./src/main/scripts/cd/deploy.sh"
   on:
     branch: develop
