--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>scalecube-organization-parent</artifactId>
@@ -23,9 +24,9 @@
   </scm>
 
   <properties>
-    <scalecube.config.version>0.3.6</scalecube.config.version>
+    <scalecube.config.version>0.3.9</scalecube.config.version>
     <scalecube-services.version>2.4.9</scalecube-services.version>
-    <scalecube-security-jwt.version>1.0.2</scalecube-security-jwt.version>
+    <scalecube-security-jwt.version>1.0.3</scalecube-security-jwt.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <junit-jupiter.version>5.3.0</junit-jupiter.version>
     <jackson-databind.version>2.7.6</jackson-databind.version>
@@ -201,10 +202,12 @@
               </goals>
               <configuration>
                 <transformers>
-                  <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <transformer
+                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                     <mainClass>${mainClass}</mainClass>
                   </transformer>
-                  <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                  <transformer
+                    implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                 </transformers>
                 <outputDirectory>${project.build.directory}</outputDirectory>
                 <createDependencyReducedPom>false</createDependencyReducedPom>
