--- a/scalecube-organization-api/pom.xml
+++ b/scalecube-organization-api/pom.xml
@@ -1,5 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>io.scalecube</groupId>
     <artifactId>scalecube-organization-parent</artifactId>
@@ -8,11 +11,6 @@
 
   <artifactId>scalecube-organization-api</artifactId>
   <name>scalecube-organization-api</name>
-  <url>http://maven.apache.org</url>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
 
   <dependencies>
     <dependency>
@@ -20,4 +18,5 @@
       <artifactId>scalecube-services-api</artifactId>
     </dependency>
   </dependencies>
+
 </project>
