--- a/pom.xml
+++ b/pom.xml
@@ -27,10 +27,10 @@
 
   <properties>
     <scalecube.config.version>0.3.9</scalecube.config.version>
-    <scalecube-services.version>2.4.9</scalecube-services.version>
+    <scalecube-services.version>2.4.10</scalecube-services.version>
     <scalecube-security-jwt.version>1.0.2</scalecube-security-jwt.version>
     <junit-jupiter.version>5.3.0</junit-jupiter.version>
-    <jackson-databind.version>2.7.6</jackson-databind.version>
+    <jackson.version>2.9.8</jackson.version>
     <vault-java-driver.version>3.1.0</vault-java-driver.version>
     <couchbase-client.version>2.6.0</couchbase-client.version>
     <slf4j.version>1.7.7</slf4j.version>
@@ -174,6 +174,17 @@
         <artifactId>hamcrest-library</artifactId>
         <version>${hamcrest-library.version}</version>
         <scope>test</scope>
+      </dependency>
+      <!-- Jackson -->
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>${jackson.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>${jackson.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
