--- a/scalecube-organization/pom.xml
+++ b/scalecube-organization/pom.xml
@@ -21,7 +21,8 @@
     <dependency>
       <groupId>io.scalecube</groupId>
       <artifactId>scalecube-organization-api</artifactId>
-      <version>${project.version}</version>
+      <!-- TODO: change to project.version after implementing new API -->
+      <version>2.0.16</version>
     </dependency>
     <dependency>
       <groupId>io.scalecube</groupId>
