--- a/scalecube-organization/pom.xml
+++ b/scalecube-organization/pom.xml
@@ -96,6 +96,11 @@
       <artifactId>junit-jupiter-params</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <scope>test</scope>
+    </dependency>
 
     <!-- This will get hamcrest-core automatically -->
     <dependency>
