--- a/scalecube-organization/pom.xml
+++ b/scalecube-organization/pom.xml
@@ -103,6 +103,14 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+
+
     <!-- Auth0 -->
     <dependency>
       <groupId>com.auth0</groupId>
