--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <scalecube.config.version>0.3.9</scalecube.config.version>
     <scalecube-services.version>2.4.10</scalecube-services.version>
     <scalecube-security-jwt.version>1.0.3</scalecube-security-jwt.version>
-    <junit-jupiter.version>5.3.0</junit-jupiter.version>
+    <junit-jupiter.version>5.3.2</junit-jupiter.version>
     <jackson.version>2.9.8</jackson.version>
     <vault-java-driver.version>3.1.0</vault-java-driver.version>
     <couchbase-client.version>2.6.0</couchbase-client.version>
@@ -164,7 +164,19 @@
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
-        <version>${junit.jupiter.version}</version>
+        <version>${junit-jupiter.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-params</artifactId>
+        <version>${junit-jupiter.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>io.scalecube</groupId>
+        <artifactId>scalecube-test-utils</artifactId>
+        <version>0.0.4</version>
         <scope>test</scope>
       </dependency>
       <!-- This will get hamcrest-core automatically -->
