--- a/scalecube-organization/pom.xml
+++ b/scalecube-organization/pom.xml
@@ -86,12 +86,16 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
-      <version>${junit-jupiter.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-params</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.scalecube</groupId>
+      <artifactId>scalecube-test-utils</artifactId>
       <scope>test</scope>
     </dependency>
 
@@ -109,7 +113,6 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-
 
     <!-- Auth0 -->
     <dependency>
