--- a/scalecube-organization/pom.xml
+++ b/scalecube-organization/pom.xml
@@ -114,6 +114,18 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>testcontainers</artifactId>
+      <version>1.10.6</version>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>vault</artifactId>
+      <version>1.10.6</version>
+    </dependency>
+
+
     <!-- Auth0 -->
     <dependency>
       <groupId>com.auth0</groupId>
