--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -25,19 +27,22 @@
 
   <properties>
     <scalecube.config.version>0.3.9</scalecube.config.version>
-    <scalecube-services.version>2.5.10</scalecube-services.version>
+    <scalecube-services.version>2.6.0</scalecube-services.version>
+    <scalecube-services-gateway.version>2.7.0</scalecube-services-gateway.version>
     <scalecube-security-jwt.version>1.0.7</scalecube-security-jwt.version>
-    <junit-jupiter.version>5.3.2</junit-jupiter.version>
+    <junit-jupiter.version>5.4.2</junit-jupiter.version>
     <jackson.version>2.9.8</jackson.version>
     <vault-java-driver.version>3.1.0</vault-java-driver.version>
     <couchbase-client.version>2.7.3</couchbase-client.version>
     <slf4j.version>1.7.7</slf4j.version>
     <log4j.version>2.11.1</log4j.version>
     <netty.version>4.1.34.Final</netty.version>
-    <hamcrest-library.version>1.3</hamcrest-library.version>
     <auth0-jwks-rsa.version>0.6.0</auth0-jwks-rsa.version>
     <reactor.version>Californium-SR8</reactor.version>
-    <scalecube-test-utils.version>0.0.4</scalecube-test-utils.version>
+    <scalecube-test-utils.version>0.0.5</scalecube-test-utils.version>
+    <testcontainers.version>1.11.3</testcontainers.version>
+
+    <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
   </properties>
 
   <modules>
@@ -174,18 +179,55 @@
         <scope>test</scope>
       </dependency>
       <dependency>
-        <groupId>org.hamcrest</groupId>
-        <artifactId>hamcrest-library</artifactId>
-        <version>${hamcrest-library.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
         <groupId>io.scalecube</groupId>
         <artifactId>scalecube-test-utils</artifactId>
         <version>${scalecube-test-utils.version}</version>
         <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>couchbase</artifactId>
+        <version>${testcontainers.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>vault</artifactId>
+        <version>${testcontainers.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>io.scalecube</groupId>
+        <artifactId>scalecube-services-gateway-clientsdk</artifactId>
+        <version>${scalecube-services-gateway.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>io.scalecube</groupId>
+        <artifactId>scalecube-services-gateway-netty</artifactId>
+        <version>${scalecube-services-gateway.version}</version>
+        <scope>test</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>${maven-failsafe-plugin.version}</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>integration-test</goal>
+                <goal>verify</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
