--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,9 @@
   </scm>
 
   <properties>
-    <scalecube.config.version>0.3.9</scalecube.config.version>
-    <scalecube-services.version>2.6.0</scalecube-services.version>
-    <scalecube-services-gateway.version>2.7.0</scalecube-services-gateway.version>
+    <scalecube.config.version>0.3.12</scalecube.config.version>
+    <scalecube-services.version>2.8.7</scalecube-services.version>
+    <scalecube-services-gateway.version>2.8.8</scalecube-services-gateway.version>
     <scalecube-security-jwt.version>1.0.7</scalecube-security-jwt.version>
     <junit-jupiter.version>5.4.2</junit-jupiter.version>
     <jackson.version>2.9.8</jackson.version>
@@ -36,10 +36,10 @@
     <couchbase-client.version>2.7.3</couchbase-client.version>
     <slf4j.version>1.7.7</slf4j.version>
     <log4j.version>2.11.1</log4j.version>
-    <netty.version>4.1.34.Final</netty.version>
+    <netty.version>4.1.36.Final</netty.version>
     <auth0-jwks-rsa.version>0.6.0</auth0-jwks-rsa.version>
     <reactor.version>Californium-SR8</reactor.version>
-    <scalecube-test-utils.version>0.0.5</scalecube-test-utils.version>
+    <scalecube-test-utils.version>0.0.7</scalecube-test-utils.version>
     <testcontainers.version>1.11.3</testcontainers.version>
 
     <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
@@ -159,6 +159,11 @@
         <artifactId>jackson-core</artifactId>
         <version>${jackson.version}</version>
       </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>${jackson.version}</version>
+      </dependency>
 
       <!-- Auth0 -->
       <dependency>
@@ -200,7 +205,13 @@
       </dependency>
       <dependency>
         <groupId>io.scalecube</groupId>
-        <artifactId>scalecube-services-gateway-clientsdk</artifactId>
+        <artifactId>scalecube-services-bytebuf-codec</artifactId>
+        <version>${scalecube-services.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>io.scalecube</groupId>
+        <artifactId>scalecube-services-gateway-client-transport</artifactId>
         <version>${scalecube-services-gateway.version}</version>
         <scope>test</scope>
       </dependency>
