--- a/pom.xml
+++ b/pom.xml
@@ -38,12 +38,12 @@
     <slf4j.version>1.7.7</slf4j.version>
     <log4j.version>2.11.1</log4j.version>
     <junit-jupiter.version>5.4.2</junit-jupiter.version>
-    <scalecube-test-utils.version>0.0.7</scalecube-test-utils.version>
+    <scalecube-test-utils.version>0.0.13</scalecube-test-utils.version>
     <testcontainers.version>1.11.3</testcontainers.version>
 
     <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
 
-    <skipITests>true</skipITests>
+    <skipITests>false</skipITests>
   </properties>
 
   <modules>
