--- a/pom.xml
+++ b/pom.xml
@@ -25,13 +25,13 @@
 
   <properties>
     <scalecube.config.version>0.3.14</scalecube.config.version>
-    <scalecube-services.version>2.8.9</scalecube-services.version>
-    <scalecube-services-gateway.version>2.8.13</scalecube-services-gateway.version>
+    <scalecube-services.version>2.8.10-SNAPSHOT</scalecube-services.version>
+    <scalecube-services-gateway.version>2.8.14-SNAPSHOT</scalecube-services-gateway.version>
     <scalecube-security-jwt.version>1.0.9</scalecube-security-jwt.version>
-    <reactor.version>Californium-SR8</reactor.version>
+    <reactor.version>Dysprosium-RELEASE</reactor.version>
     <jackson.version>2.10.0.pr1</jackson.version>
-    <netty.version>4.1.36.Final</netty.version>
-    <couchbase-client.version>2.7.3</couchbase-client.version>
+    <netty.version>4.1.37.Final</netty.version>
+    <couchbase-client.version>2.7.11</couchbase-client.version>
     <vault-java-driver.version>5.0.0</vault-java-driver.version>
     <auth0-jwks-rsa.version>0.6.0</auth0-jwks-rsa.version>
     <scalecube-app-utils.version>0.0.4</scalecube-app-utils.version>
@@ -131,13 +131,10 @@
       <!-- Netty -->
       <dependency>
         <groupId>io.netty</groupId>
-        <artifactId>netty-common</artifactId>
+        <artifactId>netty-bom</artifactId>
         <version>${netty.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>io.netty</groupId>
-        <artifactId>netty-buffer</artifactId>
-        <version>${netty.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
 
       <!-- Loggers -->
@@ -159,14 +156,11 @@
 
       <!-- Jackson -->
       <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-databind</artifactId>
+        <groupId>com.fasterxml.jackson</groupId>
+        <artifactId>jackson-bom</artifactId>
         <version>${jackson.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-core</artifactId>
-        <version>${jackson.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
 
       <!-- Auth0 -->
