--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   </scm>
 
   <properties>
-    <scalecube.config.version>0.4.4-RC2</scalecube.config.version>
+    <scalecube.config.version>0.3.14</scalecube.config.version>
     <scalecube-services.version>2.8.9</scalecube-services.version>
     <scalecube-services-gateway.version>2.8.13</scalecube-services-gateway.version>
     <scalecube-security-jwt.version>1.0.9</scalecube-security-jwt.version>
